# spring24-ditto_thesis

./: README.md
analysis/: README.md  analyze_pkt_dist.py  check_csv.py  extract_pcap_len.py  get_combined_data.py  get_metrics.py  plot_config.csv  plot_delays.py  plot_iperf.py  plot_load_time.py  plot_results.py  plot_web.py  script_web_load.py  subsample_file.py  test_mult_flows_new.py
analysis/results/: iperf_results.csv  iperf_tcp_results.csv  results_backbone_combined_100.csv  results_backbone_combined_100_p3.csv  results_backbone_combined_100_p6.csv  results_backbone_combined_200.csv  results_backbone_combined_200_p3.csv  results_backbone_combined_200_p6.csv  results_backbone_voip_100.csv  results_backbone_voip_100_p3.csv  results_backbone_voip_100_p6.csv  results_backbone_voip_200.csv  results_backbone_voip_200_p3.csv  results_backbone_voip_200_p6.csv  results_backbone_web_100.csv  results_backbone_web_100_p3.csv  results_backbone_web_100_p6.csv  results_backbone_web_200.csv  results_voip_zurich_thun_.csv  (+28 more)
budget_ditto/: Cargo.toml  README.md
budget_ditto/benches/: performance_tests.rs
budget_ditto/config/: config_client_thun.toml
budget_ditto/src/: deobfuscate.rs  feature_flags.rs  hardware_obf.rs  lib.rs  main.rs  pattern.rs  queues.rs
budget_ditto/src/queues/: priority_queue.rs  round_robin.rs
ipv4_wrapper/: Cargo.toml  LICENSE copy  README.md
sender_receiver/: Cargo.toml  README.md
software_ditto/: Cargo.toml  README.md
tests/: README.md  backbone_tests.sh  hardware_tests.sh  interactive_tests.sh  iperf_test.sh  metric_tests.sh  run_tests.sh
(+20 files in other folders)
